--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   "dependencies": {
     "@types/jest": "^25.2.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "install": "^0.13.0",
     "morgan": "^1.10.0",
     "pg": "^8.0.2",
-    "postgres": "^1.0.2"
+    "postgres": "^1.0.2",
+    "ts-node": "^8.9.1"
   }
 }
