--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "social media api for astrology fanatics",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+  "test": "jest --watch --no-cache",
+  "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
-    "jest": "^25.4.0",
+    "jest": "^25.5.4",
     "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   },
